tests/fixtures/invalid/min_set_float.py
# Cannot call min() with Set[int], Float
x = min({1, 2, 3}, 1.0)
